  the FONT NAMES AND FONT LOADING section of the fvwm2 manual page).

* Conditional commands now have a return code (Match, NoMatch or
  Error).  This return code can be checked and tied to an action
  with the new commands Cond and CondCase.

* Bindings can be made to the separate parts of the window border
  with the new contexts '[', ']', '-', '_', '<', '^', '>' and 'v'.

* New options for FvwmRearange: -maximize and -animate.

* New option StartCommand for FvwmTaskBar to allow placing the
  StartMenu correctly.

    *FvwmTaskBar: StartCommand Popup RootMenu \
	rectangle $widthx$height+$left+$top 0 -100m

  Please refer to the FvwmTaskBar man page for details.

* New extended variables pointer.x, pointer.y, pointer.wx,
  pointer.wy, pointer.cx and pointer.cy.

* Fixed an FvwmScript compile problem on dec-osf5.

* The Current command does not select a random window when no
  window has the focus.

* New colour '@4' (transparent) in button vectors.

* New option "Frame" for the Resize and ResizeMove commands.

* Added direction options to WindowShade command.  Windows can be
  shaded in any of the eight compass directions.

* Styles WindowShadeLazy (default), WindowShadeBusy and
  WindowShadeAlwaysLazy to optimize performance of the WindowShade
  command.

* The DO_START_ICONIC flag is no longer supported in the module
  interface.

Changes in alpha release 2.5.0 (27-Jan-2002)

* New commands ResizeMaximize and ResizeMoveMaximize that modify
  the maximized geometry of windows and maximize them as
  necessary.  Very useful to make a window larger manually and
  then get back the old geometry with a click.

* New command ResizeMoveMaximize similarly.

* New styles FixedPPosition, FixedUSPosition, FixedSize, FixedUSSize,
  FixedPSize, VariablePPosition, VariableUSPosition, VariableSize,
  VariableUSSize, and VariablePSize.

* Actions can be bound to windows swallowed in FvwmButtons.  To
  disable this feature for a specific button, the new option